Excel Export 기능 추가

--- a/DevExpressPivot/App.config
+++ b/DevExpressPivot/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="DevExpressPivot.Properties.Settings.yongheonDBConnectionString"
+            connectionString="Data Source=localhost;Initial Catalog=yongheonDB;User ID=lyh;Password=imsi00!!"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
